--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
             if (usuarioEncontrado) {
                 alert("¡Bienvenido " + username + "!");
                 window.location.href = 'pagina1.html';
-            }
+            } else {
+        alert("Usuario o contraseña incorrectos.");
+    }
+            
         });
     </script>
 </body>
