--- a/Registro.html
+++ b/Registro.html
@@ -12,9 +12,9 @@
       </div><br /><br />
         <form id="registerForm">
             <label for="username">Usuario:</label><br>
-            <input type="text" id="username" placeholder="Usuario" name="username"><br><br>
+            <input type="text" id="username" placeholder="Usuario" name="username" required><br><br>
             <label for="password">Contraseña:</label><br>
-            <input type="password" id="password"  placeholder="Contraseña" name="password"><br><br>
+            <input type="password" id="password"  placeholder="Contraseña" name="password" required><br><br>
             <button type="submit">Registrarse</button>
         </form>
     </div>
